# shader-conductor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  gitman.yml
shader-conductor/: CMakeLists.txt  ShaderConductor.cpp  ShaderConductor.hpp
shader-conductor-cmd/: CMakeLists.txt  ShaderConductorCmd.cpp
shader-conductor-tests/: CMakeLists.txt  ShaderConductorTest.cpp
